@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Update copyright dates
+    - Finish the Anatomy manual section
+
 0.000111  2018-03-14 12:37:45-07:00 America/Los_Angeles
 
     - No Changes since last trial
